[tool.poetry]
name = "Discord BroBot"
version = "1.6.0"
description = "Just a Simpel Discord Bot"
authors = ["Willi Alexander"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
praw = "^7.4.0"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
asyncpraw = "^7.4.0"
creds = "^1.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
